--- a/admin-portal/package.json
+++ b/admin-portal/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
