--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,34 +7,26 @@ services:
     ports:
       - "${PORT}:${PORT}"
     depends_on:
-      - mongodb
       - rag_api
     image: ghcr.io/danny-avila/librechat-dev:latest
     restart: always
-    user: "${UID}:${GID}"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
       - HOST=0.0.0.0
-      - MONGO_URI=mongodb://mongodb:27017/LibreChat
       - MEILI_HOST=http://meilisearch:7700
       - RAG_PORT=${RAG_PORT:-8000}
       - RAG_API_URL=http://rag_api:${RAG_PORT:-8000}
+      - NODE_ENV=production
+      - CONSOLE_JSON=false
+      - DEBUG_LOGGING=false
+      - DEBUG_CONSOLE=true
     volumes:
       - type: bind
         source: ./.env
         target: /app/.env
       - ./images:/app/client/public/images
       - ./uploads:/app/uploads
-      - ./logs:/app/api/logs
-  mongodb:
-    container_name: chat-mongodb
-    image: mongo
-    restart: always
-    user: "${UID}:${GID}"
-    volumes:
-      - ./data-node:/data/db
-    command: mongod --noauth
   meilisearch:
     container_name: chat-meilisearch
     image: getmeili/meilisearch:v1.12.3
@@ -67,6 +59,32 @@ services:
       - vectordb
     env_file:
       - .env
+
+  # LibreChat Admin Portal
+  admin-portal:
+    build:
+      context: ./admin-portal
+      dockerfile: Dockerfile
+    container_name: LibreChat-AdminPortal
+    ports:
+      - "4000:4000"
+    environment:
+      - NODE_ENV=production
+      - ADMIN_PORT=4000
+      - MONGO_URI=${MONGO_URI}
+      - JWT_SECRET=${JWT_SECRET}
+    restart: always
+    volumes:
+      - type: bind
+        source: ./admin-portal/.env
+        target: /app/.env
+      - ./admin-portal/logs:/app/logs
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:4000/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
   pgdata2:
